# VroxVPN

./: .gitignore  AGENTS.md  README.md  main.py  requirements.txt  version.json
app/: eslint.config.js  package.json  pnpm-lock.yaml
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/macos/: entitlements.plist
app/src-tauri/resources/: privileged_helper.sh  privileged_helper_macos.sh
app/src-tauri/resources/geoip/: ru_ipv4.txt  ru_ipv6.txt
app/src-tauri/resources/geosite/: ru_domains.txt
app/src-tauri/scripts/: postinst.sh  postrm.sh
app/src-tauri/src/: app_update.rs  commands.rs  config_gen.rs  engine.rs  geoip.rs  geosite.rs  lib.rs  ping.rs  resources.rs  settings.rs  subscription.rs  tray.rs
app/src-tauri/src/engine/: linux.rs  macos.rs
app/src-tauri/src/engine/linux/: connect.rs  disconnect.rs  helper.rs  killswitch.rs  mod.rs  setup.rs  stats.rs  update.rs
app/src-tauri/src/engine/macos/: disconnect.rs  manager.rs  mod.rs  stats.rs
app/src-tauri/src/engine/macos/connect/: disconnect_watcher.rs  mod.rs  wait_result.rs
app/src/components/: AddSubscriptionSheet.tsx  BottomAction.tsx  Switch.tsx  (+6 more)
assets/icons/: generate_icon.py
core/: autostart.py  config_gen.py  dns_manager.py  geoip.py  geosite.py  installer.py  kill_switch.py  ping.py  privileged.py  privileged_helper.sh  procname.py  settings.py  stats.py  subscription.py  tray.py  tray_process.py  tun_manager.py  updater.py
docs/: ARCHITECTURE.md
macos-ext/: build-go-framework.sh  build-release.sh  build-testflight.sh  embed-into-tauri-app.sh  project.yml
macos-ext/VroxTunnelExtension/: Info.plist  PacketTunnelProvider.swift  VroxTunnelExtension.entitlements
macos-ext/VroxVPNHost/: AppDelegate.swift  Info.plist  main.swift
packaging/deb/: build.sh
packaging/hysteria2-patch/: build.sh  bump.sh  direct-domains.patch  directmatch.go  directmatch_darwin.go  directmatch_linux.go  dnssniff.go  dnssniff_darwin.go  dnssniff_linux.go
scripts/: install.sh
ui/: compat.py  log_panel.py  main_window.py  server_row.py  stats_bar.py
(+26 files in other folders)
