[package]
name = "app"
version = "4.0.0"
description = "vrox.vpn — Hysteria2 VPN клиент"
authors = ["Vroxory"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.4", features = ["json"] }
serde_yaml = "0.9.34"
base64 = "0.22.1"
url = "2.5.8"
percent-encoding = "2.3.2"
dirs = "6.0.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["process", "rt", "time"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-single-instance = "2.4.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
